# venari

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  Dockerfile  README.md  compose.yaml  pyproject.toml
src/venari/: engine.py  engine_interface.py  main.py  models.py
src/venari/venari/: scrapper.py
src/vendors/: parser_interfaces.py  utils.py
src/vendors/justjoinit/: parsers.py  scrapper.py
src/vendors/justjoinit/tests/: test_parser.py
src/vendors/justjoinit/tests/data/: content.html  offer_partial_salary.html  offer_with_full_salary.html  offer_without_salary.html
venari/: pyproject.toml
