[project]
name = "venari"
version = "0.2.0"
description = "Job hunting scrapper tool"
readme = "README.md"
authors = [
    { name = "Dawid", email = "rygula.dawid@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
]

[project.scripts]
start = "venari.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
